// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /members should return 200 without search filters for user id 1 1`] = `
{
  "members": [
    {
      "memberId": "Pekka1",
      "name": "Pekka Hämäläinen",
      "phoneNumber": "0445678901",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "memberId": "Antti1",
      "name": "Antti Heikkinen",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "memberId": "Liisa1",
      "name": "Liisa Korhonen",
      "phoneNumber": "0412345678",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Sanna1",
      "name": "Sanna Koskinen",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Anna1",
      "name": "Anna Mäkinen",
      "phoneNumber": "0434567890",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Jukka1",
      "name": "Jukka Nieminen",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "memberId": "Juha1",
      "name": "Juha Seppälä",
      "phoneNumber": "0489012345",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "memberId": "Matti1",
      "name": "Matti Virtanen",
      "phoneNumber": "0401234567",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
  ],
}
`;

exports[`GET /members should return 200 without search filters for user id 2 1`] = `
{
  "members": [
    {
      "memberId": "k1mnimda",
      "name": "MIK Admin",
      "phoneNumber": null,
      "roles": [
        "ADMIN",
      ],
    },
    {
      "memberId": "Pekka1",
      "name": "Pekka Hämäläinen",
      "phoneNumber": "0445678901",
      "roles": [
        "ADMIN",
        "MEMBER",
      ],
    },
    {
      "memberId": "Antti1",
      "name": "Antti Heikkinen",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "memberId": "Liisa1",
      "name": "Liisa Korhonen",
      "phoneNumber": "0412345678",
      "roles": [
        "ADMIN",
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Sanna1",
      "name": "Sanna Koskinen",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Kaisa1",
      "name": "Kaisa Laine",
      "phoneNumber": "0456789012",
      "roles": [
        "ADMIN",
      ],
    },
    {
      "memberId": "Anna1",
      "name": "Anna Mäkinen",
      "phoneNumber": "0434567890",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "memberId": "Jukka1",
      "name": "Jukka Nieminen",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "memberId": "Marja1",
      "name": "Marja Salminen",
      "phoneNumber": "0490123456",
      "roles": [],
    },
    {
      "memberId": "Juha1",
      "name": "Juha Seppälä",
      "phoneNumber": "0489012345",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "memberId": "Matti1",
      "name": "Matti Virtanen",
      "phoneNumber": "0401234567",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
  ],
}
`;

exports[`GET /members should search by unapproved roles as an admin 1`] = `
[
  {
    "memberId": "Marja1",
    "name": "Marja Salminen",
    "phoneNumber": "0490123456",
    "roles": [],
  },
]
`;

exports[`GET /members/id Get member details as an admin 1`] = `
{
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "Admin",
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`GET /members/me should return 200 with valid token for user 1`] = `
{
  "billingId": "BILL001",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "isTrainingProgramPilot": false,
  "lastName": "Virtanen",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
      },
      "permissions": [
        "member",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 2`] = `
{
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "isTrainingProgramPilot": false,
  "lastName": "Admin",
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 3`] = `
{
  "billingId": "BILL002",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1985-02-20",
  "email": "juho.kolehmainen@iki.fi",
  "firstName": "Liisa",
  "iceContactName": "Matti Korhonen",
  "iceContactPhoneNumber": "0418765432",
  "isTrainingProgramPilot": false,
  "lastName": "Korhonen",
  "memberId": "Liisa1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "phoneNumber": "0412345678",
  "postcode": "02100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK board member with decision-making authority in the club",
      "isPublic": true,
      "name": {
        "en": "Committee Member",
        "fi": "Hallituksen jäsen",
      },
      "permissions": [],
      "roleId": "COMMITTEE",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Mannerheimintie 10",
  "townCity": "Espoo",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;
